Changing hotel star rating theme. Adding a temporary asset.
Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D169

--- a/project/res/layout/fragment_hotel_details.xml
+++ b/project/res/layout/fragment_hotel_details.xml
@@ -44,7 +44,7 @@
 
                     <RatingBar
                         android:id="@+id/hotel_rating_bar"
-                        style="@style/RatingBarSmall.Shadowed.Star"
+                        style="?attr/hotelTabletStarRatingStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
