--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -334,4 +334,6 @@
     <attr name="userRatingTabletSnippetStyle" format="reference"/>
     <attr name="reviewsTitleTabletStyle" format="reference"/>
 
+    <attr name="hotelTabletStarRatingStyle" format="reference"/>
+
 </resources>
