--- a/project/res/layout/fragment_results_dates.xml
+++ b/project/res/layout/fragment_results_dates.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -13,7 +14,7 @@
         android:layout_weight="0"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:textColor="@android:color/white"
+        android:textColor="#000000"
         android:textSize="16dp" />
 
 
@@ -23,7 +24,15 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:background="@drawable/bg_dates_calendar_picker"
-        android:padding="2dp" />
+        android:padding="2dp"
+        app:calendarBaseColor="#000000"
+        app:calendarSecondaryColor="#6F6F6F"
+        app:calendarHighlightColor="#0FCFCF"
+        app:calendarHighlightInverseColor="#FFFFFF"
+        app:calendarTodayColor="#FF4F4F"
+        app:calendarInvalidDaysColor="#CFCFCF"
+        app:calendarDaysOfWeekColor="#000000"
+        app:calendarChangeMonthCaretColor="#000000"
+        app:calendarHeaderTextColor="#000000"/>
 </LinearLayout>
 
