--- a/project/res/layout/fragment_tablet_slide_to_purchase.xml
+++ b/project/res/layout/fragment_tablet_slide_to_purchase.xml
@@ -1,17 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#66ff0000">
 
-    <TextView
-        android:id="@+id/goto_cvv_btn"
+    <LinearLayout
+        android:id="@+id/accept_tos_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="GOTO CVV SCREEN"
-        android:textColor="#FFFFFF"
-        android:background="#80008000"
-        android:textSize="32dp"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/do_you_accept_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:text="@string/Do_you_accept"
+            android:textColor="#FCFCFC"/>
+
+        <!-- We build this whole oval manually instead of as a simple 9patch for l337 animation effects -->
+
+        <LinearLayout
+            android:id="@+id/layout_i_accept"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/slide_to_purchase"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/i_accept_left_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_slide_to_purchase_circle_left"/>
+
+            <TextView
+                android:id="@+id/i_accept_center_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_slide_to_purchase_circle_center"
+                android:gravity="center"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:text="@string/I_Accept"
+                android:textColor="#FCFCFC"
+                android:textSize="26sp"/>
+
+            <ImageView
+                android:id="@+id/i_accept_right_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_slide_to_purchase_circle_right"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/slide_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="15dp"
+        android:paddingTop="10dp">
+
+        <com.expedia.bookings.widget.SlideToWidget
+            android:id="@+id/slide_to_purchase_widget"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:destComplete="@drawable/slide_complete"
+            app:destImage="@drawable/slide_goal"
+            app:dragImage="@drawable/slide_drag"
+            app:lineColor="#46CFCFCF"
+            app:sliderImage="@drawable/slide_hint"
+            app:sliderText="@string/slide_to_purchase"/>
+
+        <TextView
+            android:id="@+id/purchase_total_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="#FCFCFC"
+            android:textSize="@dimen/slide_to_purchase_price_text_size"/>
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/book_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.expedia.bookings.widget.TextView
+            android:layout_width="220dp"
+            android:layout_height="59dp"
+            android:layout_gravity="center"
+            android:background="#f7de5e"
+            android:textColor="#000000"
+            android:textSize="19sp"
+            android:text="@string/Finish_Booking"
+            app:textStyle="light"/>
+    </FrameLayout>
 
 </FrameLayout>
