Changing color for child selection and booking info buttons
Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D171

--- a/project/res/layout-port/fragment_booking.xml
+++ b/project/res/layout-port/fragment_booking.xml
@@ -21,7 +21,7 @@
 
         <Button
             android:id="@+id/complete_booking_info_button"
-            style="@style/Widget.Button.Yellow.Confirmation"
+            style="?attr/hotelBookingInfoButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
