--- a/project/res/layout/fragment_booking.xml
+++ b/project/res/layout/fragment_booking.xml
@@ -42,7 +42,7 @@
 
         <Button
             android:id="@+id/complete_booking_info_button"
-            style="@style/Widget.Button.Yellow.Confirmation"
+            style="?attr/hotelBookingInfoButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
