--- a/project/res/layout/fragment_search_params.xml
+++ b/project/res/layout/fragment_search_params.xml
@@ -208,7 +208,7 @@
 
         <Button
             android:id="@+id/done_button"
-            style="@style/Widget.Button.Yellow"
+            style="?attr/hotelDetailsTabletButtonStyle"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
