2602: Implement tracking opt-out setting
The next time the app launches it will not run AdX at all.

--- a/project/res/values/donottranslate.xml
+++ b/project/res/values/donottranslate.xml
@@ -104,6 +104,7 @@
     <string name="preference_force_fs_db_update">preference_force_fs_db_update</string>
     <string name="preference_push_notification_gcm_id">preference_push_notification_gcm_id</string>
     <string name="preference_fake_invalid_google_wallet_line_item">preference_fake_invalid_google_wallet_line_item</string>
+    <string name="preference_tracking_optout">preference_tracking_optout</string>
 
     <!-- Setting keys -->
     <string name="setting_hide_hotel_attach">setting_hide_hotel_attach</string>
