--- a/project/res/layout/fragment_results_waypoint_search.xml
+++ b/project/res/layout/fragment_results_waypoint_search.xml
@@ -1,8 +1,13 @@
 <com.expedia.bookings.widget.FrameLayoutTouchController xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
-    android:background="#CC000000"
     android:layout_height="match_parent">
+
+    <View
+        android:id="@+id/bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#EE000000" />
 
     <LinearLayout
         android:id="@+id/search_bar_conatiner"
