--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -85,16 +85,23 @@
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/widget_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FFFFFF">
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/widget_container_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FFFFFF" />
 
         <com.expedia.bookings.widget.FrameLayoutTouchController
             android:id="@+id/calendar_container"
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
         <com.expedia.bookings.widget.FrameLayoutTouchController
             android:id="@+id/traveler_container"
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
