--- a/project/res/layout/fragment_tablet_slide_to_purchase.xml
+++ b/project/res/layout/fragment_tablet_slide_to_purchase.xml
@@ -65,15 +65,10 @@
         android:paddingBottom="15dp"
         android:paddingTop="10dp">
 
-        <com.expedia.bookings.widget.SlideToWidget
+        <com.expedia.bookings.widget.SlideToWidgetJB
             android:id="@+id/slide_to_purchase_widget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:destComplete="@drawable/slide_complete"
-            app:destImage="@drawable/slide_goal"
-            app:dragImage="@drawable/slide_drag"
-            app:lineColor="#46CFCFCF"
-            app:sliderImage="@drawable/slide_hint"
             app:sliderText="@string/slide_to_purchase"/>
 
         <TextView
