--- a/project/res/layout/fragment_tablet_slide_to_purchase.xml
+++ b/project/res/layout/fragment_tablet_slide_to_purchase.xml
@@ -3,7 +3,7 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="#66ff0000">
+             android:background="#40000000">
 
     <LinearLayout
         android:id="@+id/accept_tos_container"
@@ -17,7 +17,7 @@
             android:id="@+id/do_you_accept_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
+            android:layout_marginBottom="-18dp"
             android:text="@string/Do_you_accept"
             android:textColor="#FCFCFC"/>
 
@@ -27,6 +27,8 @@
             android:id="@+id/layout_i_accept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"
             android:contentDescription="@string/slide_to_purchase"
             android:orientation="horizontal">
 
