--- a/project/res/layout/row_flight_histogram.xml
+++ b/project/res/layout/row_flight_histogram.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="6dp"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp"
+    android:paddingTop="6dp"
+    android:background="@android:color/white">
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/flight_histogram_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:padding="4dp"
+        android:textSize="16sp"
         android:textColor="@android:color/white"
-        android:background="@color/dark_blue"/>
+        android:background="@drawable/bg_flight_summary_row_tablet"
+        app:textStyle="normal" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/flight_histogram_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/white" />
+        android:layout_marginLeft="6dp"
+        android:textSize="16sp"
+        app:textStyle="bold" />
 
 </LinearLayout>
