--- a/project/res/layout/widget_slide_to_jb.xml
+++ b/project/res/layout/widget_slide_to_jb.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_vertical">
 
     <ImageView
@@ -23,8 +22,7 @@
         android:background="@drawable/slide_line_gradient"
         android:visibility="invisible"/>
 
-    <!-- TODO: com.mobiata.android.widget.AutoResizeTextView -->
-    <TextView
+    <com.mobiata.android.widget.AutoResizeTextView
         android:id="@+id/slider_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,7 +38,8 @@
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/slider_text"
         android:src="@drawable/slide_finish_unchecked"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:contentDescription="@string/cd_slide_to_checkout_end"/>
 
     <View
         android:id="@+id/dots"
