--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -108,7 +108,7 @@
     </com.expedia.bookings.widget.FrameLayoutTouchController>
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
-        android:id="@+id/origin_container"
+        android:id="@+id/waypoint_container"
         android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
