--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -239,11 +239,13 @@
     <dimen name="breakdown_indentation">17dp</dimen>
     <dimen name="breakdown_text_margin">8dp</dimen>
 
+    <!-- Hotel Checkout -->
     <!-- -1px == match_parent forall screen sizes -->
     <!-- This is overridden for tablets in landscape -->
     <dimen name="standard_content_width">@dimen/match_parent</dimen>
     <dimen name="hotel_checkout_overview_width">@dimen/standard_content_width</dimen>
     <dimen name="hotel_checkout_overview_image_height">120dp</dimen>
+    <dimen name="slide_to_purchase_container_height">200dp</dimen>
 
     <!-- From ABS, Dialog title height -->
     <dimen name="alert_dialog_window_title_height">64dip</dimen>
