--- a/project/res/layout/fragment_results_waypoint_search.xml
+++ b/project/res/layout/fragment_results_waypoint_search.xml
@@ -7,52 +7,44 @@
         android:id="@+id/bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#EE000000" />
+        android:background="#ff11182c" />
 
     <LinearLayout
         android:id="@+id/search_bar_conatiner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/cancel_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:text="@string/cancel" />
+        android:background="@drawable/bg_tablet_search_header"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp">
 
         <EditText
             android:id="@+id/waypoint_edit_text"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="#FFFFFF"
+            android:textColor="@android:color/black"
             android:focusableInTouchMode="false"
             android:hint="@string/destinations_hint"
+            android:background="@null"
+            android:paddingLeft="16dp"
+            android:drawableLeft="@drawable/ic_searchbox"
+            android:drawablePadding="8dp"
             android:inputType="textNoSuggestions"
             android:singleLine="true"
             android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/search_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:text="@string/search" />
-
     </LinearLayout>
 
 
     <FrameLayout
         android:id="@+id/suggestions_container"
+        android:background="#66000000"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/search_header"
         android:layout_centerHorizontal="true"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp" />
+        android:paddingTop="8dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp" />
 
 </com.expedia.bookings.widget.FrameLayoutTouchController>
