Flight search histogram UI - add colors, for science
So, I was thinking of ways to better visualize this flight
data we get back from GDE, and I decided to assign the price
a color based upon which quartile range the price falls under.
Green means this deal is cheap, red means this deal is on the
expensive end.

My main idea is to have these colors on the calendar, as
somewhat of a calendar heatmap, pointing to you the best days
to select...but that's not gonna happen unless we're sure we
want to do that...

--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -178,6 +178,11 @@
     <color name="tablet_flight_trip_view_airport_text_color">#aaffffff</color>
     <color name="tablet_flight_details_primary_text_color">#4c4c4c</color>
 
+    <color name="tablet_flight_histogram_green">#A3A2D104</color>
+    <color name="tablet_flight_histogram_yellow">#A3F7DE08</color>
+    <color name="tablet_flight_histogram_orange">#A3FF9900</color>
+    <color name="tablet_flight_histogram_red">#A3C42126</color>
+
     <!-- Tablet Checkout -->
     <color name="tablet_checkout_light">#E5E6E5</color>
     <color name="tablet_checkout_dark">#464D51</color>
