--- a/project/res/layout/fragment_results_waypoint_search.xml
+++ b/project/res/layout/fragment_results_waypoint_search.xml
@@ -9,32 +9,7 @@
         android:layout_height="match_parent"
         android:background="#ff11182c" />
 
-    <LinearLayout
-        android:id="@+id/search_bar_conatiner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_tablet_search_header"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp">
-
-        <EditText
-            android:id="@+id/waypoint_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:focusableInTouchMode="false"
-            android:hint="@string/destinations_hint"
-            android:background="@null"
-            android:paddingLeft="16dp"
-            android:drawableLeft="@drawable/ic_searchbox"
-            android:drawablePadding="8dp"
-            android:inputType="textNoSuggestions"
-            android:singleLine="true"
-            android:textSize="18dp" />
-    </LinearLayout>
-
+    <include layout="@layout/include_tablet_waypoint_search_bar" />
 
     <FrameLayout
         android:id="@+id/suggestions_container"
