--- a/project/res/layout/activity_tablet_launch.xml
+++ b/project/res/layout/activity_tablet_launch.xml
@@ -15,10 +15,28 @@
         android:layout_gravity="bottom"
         android:orientation="vertical">
 
-        <include
+        <LinearLayout
+            android:id="@+id/search_bar_conatiner"
             android:layout_width="@dimen/tablet_search_width"
             android:layout_height="@dimen/tablet_search_header_height"
-            layout="@layout/include_tablet_waypoint_search_bar" />
+            android:background="@drawable/bg_tablet_search_header"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp">
+
+            <TextView
+                android:id="@+id/waypoint_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/search_all_hint"
+                android:background="@null"
+                android:paddingLeft="16dp"
+                android:drawableLeft="@drawable/ic_searchbox"
+                android:drawablePadding="8dp"
+                android:singleLine="true"
+                android:textSize="18dp" />
+        </LinearLayout>
 
         <FrameLayout
             android:id="@+id/tiles_container"
