--- a/project/res/layout/fragment_tablet_results_hotels.xml
+++ b/project/res/layout/fragment_tablet_results_hotels.xml
@@ -38,4 +38,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <com.expedia.bookings.widget.FrameLayoutTouchController
+        android:id="@+id/loading_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </FrameLayout>
