--- a/project/res/values-sw600dp/styles.xml
+++ b/project/res/values-sw600dp/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="Widget.TextView.CVVPromptBase">
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:layout_marginTop">8dp</item>
@@ -14,4 +15,10 @@
         <item name="android:textSize">26sp</item>
         <item name="minTextSize">15dp</item>
     </style>
+
+    <style name="BookingSection">
+        <item name="android:padding">8dp</item>
+        <item name="android:background">@drawable/bg_checkout_information_single</item>
+    </style>
+
 </resources>
