--- a/project/res/layout/fragment_results_waypoint_search.xml
+++ b/project/res/layout/fragment_results_waypoint_search.xml
@@ -1,58 +1,82 @@
-<com.expedia.bookings.widget.FrameLayoutTouchController xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
+
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ff11182c" />
 
+
     <LinearLayout
         android:id="@+id/search_bar_conatiner"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/tablet_search_width"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:animateLayoutChanges="true"
-        android:orientation="horizontal">
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/waypoint_edit_text"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@android:color/black"
-            android:focusableInTouchMode="false"
-            android:hint="@string/search_all_hint"
-            android:background="@drawable/bg_tablet_search_header"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:drawableLeft="@drawable/ic_searchbox"
-            android:drawablePadding="8dp"
-            android:inputType="textNoSuggestions"
-            android:imeOptions="actionSearch"
-            android:singleLine="true"
-            android:textSize="18dp" />
+            android:gravity="center_vertical"
+            android:animateLayoutChanges="true"
+            android:orientation="horizontal">
 
-        <ProgressBar
-            android:id="@+id/location_loading_progress"
-            android:layout_weight="0"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center_vertical|right"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:gravity="center_vertical|right"
-            android:indeterminate="true"
+            <EditText
+                android:id="@+id/waypoint_edit_text"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/tablet_search_header_height"
+                android:layout_weight="1"
+                android:textColor="@android:color/black"
+                android:focusableInTouchMode="false"
+                android:hint="@string/search_all_hint"
+                android:background="@drawable/bg_tablet_search_header"
+                android:paddingLeft="16dp"
+                android:drawableLeft="@drawable/ic_searchbox"
+                android:drawablePadding="8dp"
+                android:inputType="textNoSuggestions"
+                android:imeOptions="actionSearch"
+                android:singleLine="true"
+                android:textSize="18dp" />
+
+            <ProgressBar
+                android:id="@+id/location_loading_progress"
+                android:layout_weight="0"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical|right"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
+                android:gravity="center_vertical|right"
+                android:indeterminate="true"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/error_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:textAllCaps="true"
+            android:textSize="12dp"
+            android:gravity="top|right"
+            android:textColor="#FFFFFF"
             android:visibility="gone" />
+
     </LinearLayout>
 
     <FrameLayout
         android:id="@+id/suggestions_container"
+        android:layout_below="@id/search_bar_conatiner"
         android:background="#66000000"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/tablet_search_width"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -60,4 +84,4 @@
         android:paddingLeft="8dp"
         android:paddingRight="8dp" />
 
-</com.expedia.bookings.widget.FrameLayoutTouchController>
+</RelativeLayout>
