Fixed login button text size/style back to normal on phone

--- a/project/res/layout/include_account_button.xml
+++ b/project/res/layout/include_account_button.xml
@@ -79,8 +79,8 @@
             android:gravity="center_vertical"
             android:text="?attr/hotelCheckoutLoginButtonText"
             android:textColor="#363636"
-            android:textSize="18sp"
-            app:textStyle="light" />
+            android:textSize="@dimen/login_button_text_size"
+            app:textStyle="@integer/login_button_text_style" />
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/login_blurb"
