--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -4,6 +4,7 @@
     <!-- Account / Login button -->
     <dimen name="account_button_margin_top">0dp</dimen>
     <dimen name="account_button_padding">10dp</dimen>
+    <dimen name="login_button_text_size">18sp</dimen>
 
     <!-- Special dimensions for 7" tablets -->
     <dimen name="receipt_portrait_horizontal_margin">0dp</dimen>
