--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -219,7 +219,7 @@
     <dimen name="login_field_padding">12dp</dimen>
     <dimen name="login_field_width">400dp</dimen>
     <dimen name="login_button_width">328dp</dimen>
-    <dimen name="login_button_text_size">16dp</dimen>
+    <dimen name="login_button_text_size">16sp</dimen>
     <dimen name="login_side_margin_medium">20dp</dimen>
     <dimen name="login_side_margin_small">16dp</dimen>
     <dimen name="login_or_spacing">12dp</dimen>
