--- a/project/res/values/integers.xml
+++ b/project/res/values/integers.xml
@@ -24,6 +24,9 @@
     <!-- visibilities -->
     <integer name="attraction_bubble_visibility">0</integer>
 
+    <!-- login button font style: 0 = normal, 32 = light -->
+    <integer name="login_button_text_style">0</integer>
+
     <!-- Country codes -->
     <integer name="country_phone_code_af">93</integer>
     <integer name="country_phone_code_al">355</integer>
