--- a/project/res/values-sw600dp/styles.xml
+++ b/project/res/values-sw600dp/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="Widget.TextView.CVVPromptBase">
         <item name="android:layout_centerHorizontal">true</item>
@@ -19,6 +19,25 @@
     <style name="BookingSection">
         <item name="android:padding">8dp</item>
         <item name="android:background">@drawable/bg_checkout_information_single</item>
+    </style>
+
+    <style name="HorizontalOnTablet">
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="LoginButtonTopTextStyle">
+        <item name="android:textColor">#363636</item>
+        <item name="android:textSize">18sp</item>
+        <item name="textStyle">light</item>
+    </style>
+
+    <style name="LoginButtonBottomTextStyle">
+        <item name="android:textColor">#cc363636</item>
+        <item name="android:textSize">18sp</item>
+        <item name="textStyle">light</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">right</item>
+        <item name="android:layout_marginRight">10dp</item>
     </style>
 
 </resources>
