--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:mobiata="http://schemas.android.com/apk/res-auto">
+<resources
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- System -->
 
@@ -1044,6 +1046,18 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#006BB2</item>
+    </style>
+
+    <style name="HorizontalOnTablet">
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="LoginButtonTopTextStyle">
+        <item name="android:textColor">@color/text_dark</item>
+    </style>
+
+    <style name="LoginButtonBottomTextStyle">
+        <item name="android:textColor">@color/text_dark</item>
     </style>
 
 </resources>
