Fixed wrong font issue

--- a/project/res/layout/include_account_button.xml
+++ b/project/res/layout/include_account_button.xml
@@ -126,7 +126,7 @@
                 android:layout_height="wrap_content"
                 style="@style/LoginButtonTopTextStyle" />
 
-            <com.mobiata.android.widget.AutoResizeTextView
+            <com.expedia.bookings.widget.AutoResizeTextView
                 android:id="@+id/account_bottom_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
